Bug 343378 - problem in: Edit Color Scheme
Summary: problem in: Edit Color Scheme
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: junior-jobs, regression
Depends on:
Blocks:
 
Reported: 2015-01-27 17:12 UTC by nobuo
Modified: 2015-03-18 06:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description nobuo 2015-01-27 17:12:50 UTC
In the "Edit Color Scheme window,"  the selection a any color  open up the "select color" window.
The problem is that the color in "Edit Color Scheme window"  does not match with the color in "select color".  It maps always a green color. 

Reproducible: Always

Steps to Reproduce:
1. go to : settings > edit profile > appearence > edit 
2. select a color 


Actual Results:  
the selected color does not match with the color selector

Expected Results:  
the selected color should be the same in the color selector
Comment 1 Kurt Hindenburg 2015-01-31 20:36:58 UTC
Git commit 4cc527b395f86939786d643838ab16241b927b60 by Kurt Hindenburg.
Committed on 31/01/2015 at 20:34.
Pushed by hindenburg into branch 'master'.

Set current color as selected in QColorDialog::getColor()

Fix regression where each color selected started as green.

Thanks Boris Egorov egorov linux com for fix
REVIEW: 122345

M  +1    -1    src/ColorSchemeEditor.cpp

http://commits.kde.org/konsole/4cc527b395f86939786d643838ab16241b927b60
Comment 2 Zbynek Novotny 2015-03-18 06:33:26 UTC
Hi all, I am suffering from a similar (or same?) issue. When I click any color frame in the Konsole color scheme editor, the color editor dialog pops up but the color setting is not carried over and in my case the color set in the dialog is always full white.

This is on Arch Linux running KDE Frameworks 5.8 and Konsole 3.0.1