Set current color as selected in QColorDialog::getColor()

Fix regression where each color selected started as green.

Thanks Boris Egorov egorov linux com for fix

BUG: 343378
REVIEW: 122345